added new attack for paladin and balanced archer dodge